Fix accessibility concerns on headings, color contrast

--- a/src/components/diploma/diploma.module.scss
+++ b/src/components/diploma/diploma.module.scss
@@ -116,6 +116,7 @@ $offset: -$padding;
 
 	@include image-replacement;
 
+	color: $white;
 	margin: 20px auto;
 	overflow: visible;
 	position: relative;
